apps/argo-workflows/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
  namespace: argo
spec:
  template:
    spec:
      containers:
      - name: argo-server
        ports:
          - containerPort: 2746
            protocol: TCP
        args:
          - server
          - '--namespaced'
          - '--auth-mode'
          - client
