apps/argo-workflows/base/ingress.yaml
# argo internal. Point /etc/hosts to this ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-local
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https # ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: argo.this
      http:
        paths:
          - backend:
              service:
                name: argo-server
                port:
                  number: 2746
            path: /
            pathType: Prefix
